--- a/style.css
+++ b/style.css
@@ -55,3 +55,17 @@ border-radius: 10071.43px;
  height: auto;
  padding-top: 29px;
 }
+
+.heading{
+    width: 405;
+    height: 152;
+    top: 264px;
+    left: 880px;
+    opacity: 1;
+   margin-bottom: 55px;
+font-weight: 700;
+font-style: Bold;
+font-size: 70px;
+line-height: 76px;
+ letter-spacing: 0px;
+}
